--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22.10.3",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.7",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
